--- a/index.html
+++ b/index.html
@@ -12,23 +12,13 @@
       height: 100%;
       width: 100%;
       background-color: #000;
+      background-image: url('kotyatnitsa_background.png');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
       overflow: hidden;
       font-family: 'Comfortaa', sans-serif;
-    }
-
-    .wrapper {
       position: relative;
-      width: 100%;
-      height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
-
-    .wrapper img {
-      max-height: 100%;
-      max-width: 100%;
-      object-fit: contain;
     }
 
     .lapka {
@@ -41,11 +31,10 @@
       background-position: center;
       cursor: pointer;
       animation: pulse 1.2s infinite ease-in-out;
-
-      /* Позиция как проценты относительно изображения */
-      top: 61%;
-      left: 60%;
+      top: 62.5%;
+      left: 59.8%;
       transform: translate(-50%, -50%);
+      z-index: 2;
     }
 
     @keyframes pulse {
@@ -53,34 +42,17 @@
       50%      { transform: translate(-50%, -50%) scale(1.22); }
     }
 
-    .hint {
-      position: absolute;
-      top: 10px;
-      width: 100%;
-      text-align: center;
-      text-shadow: 0 0 6px #000;
-      z-index: 5;
-    }
-
     audio { display: none; }
   </style>
 </head>
 <body>
-  <div class="hint">
-    <img src="https://telegram.org/img/t_logo.png" alt="TG" style="height: 18px; vertical-align: middle; margin-right: 4px;">
-    <span style="font-size: 1.1em;">
-      Отборные видео с котами — <strong>телеграм-канал <span style="color:#FFD700;">КОТЯТНИЦА</span> 😺</strong>
-    </span>
-  </div>
 
-  <div class="wrapper">
-    <img src="kotyatnitsa_background.png" alt="Фон с котом">
-    <a href="https://t.me/kotyatnitsa" onclick="ym(101949561,'reachGoal','tg_click')">
-      <div class="lapka" id="lapka"></div>
-    </a>
-  </div>
+  <a href="https://t.me/kotyatnitsa" onclick="ym(101949561,'reachGoal','tg_click')">
+    <div class="lapka" id="lapka"></div>
+  </a>
 
   <audio id="meow" src="https://www.fesliyanstudios.com/play-mp3/6965"></audio>
+
   <script>
     document.getElementById('lapka').addEventListener('click', () => {
       document.getElementById('meow').play();
@@ -90,17 +62,17 @@
   <!-- Яндекс.Метрика -->
   <script type="text/javascript">
     (function(m,e,t,r,i,k,a){
-      m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+      m[i]=m[i]||function(){(m[i.a=m[i.a||[]]).push(arguments)};
       m[i].l=1*new Date();
       k=e.createElement(t),a=e.getElementsByTagName(t)[0];
-      k.async=1; k.src=r; a.parentNode.insertBefore(k,a);
+      k.async=1;k.src=r;a.parentNode.insertBefore(k,a)
     })(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
     ym(101949561, "init", {
-      clickmap: true,
-      trackLinks: true,
-      accurateTrackBounce: true,
-      webvisor: true
+      clickmap:true,
+      trackLinks:true,
+      accurateTrackBounce:true,
+      webvisor:true
     });
   </script>
   <noscript>
