--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
       0%, 100% { transform: translate(-50%, -50%) scale(1); }
       50%      { transform: translate(-50%, -50%) scale(1.22); }
     }
-
-    audio { display: none; }
   </style>
 </head>
 <body>
@@ -51,28 +49,20 @@
     <div class="lapka" id="lapka"></div>
   </a>
 
-  <audio id="meow" src="https://www.fesliyanstudios.com/play-mp3/6965"></audio>
-
-  <script>
-    document.getElementById('lapka').addEventListener('click', () => {
-      document.getElementById('meow').play();
-    });
-  </script>
-
   <!-- Яндекс.Метрика -->
   <script type="text/javascript">
     (function(m,e,t,r,i,k,a){
-      m[i]=m[i]||function(){(m[i.a=m[i.a||[]]).push(arguments)};
+      m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
       m[i].l=1*new Date();
       k=e.createElement(t),a=e.getElementsByTagName(t)[0];
-      k.async=1;k.src=r;a.parentNode.insertBefore(k,a)
+      k.async=1; k.src=r; a.parentNode.insertBefore(k,a);
     })(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
     ym(101949561, "init", {
-      clickmap:true,
-      trackLinks:true,
-      accurateTrackBounce:true,
-      webvisor:true
+      clickmap: true,
+      trackLinks: true,
+      accurateTrackBounce: true,
+      webvisor: true
     });
   </script>
   <noscript>
