--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     html, body {
       margin: 0;
       padding: 0;
-       height: 100vh;
+       height: 100dvh;
         width: 100vw;
 /*      overflow: hidden;*/
 /*      font-family: 'Comfortaa', sans-serif;*/
