--- a/index.html
+++ b/index.html
@@ -54,20 +54,20 @@
     html, body {
       margin: 0;
       padding: 0;
-       height: 100%;
-        width: 100vw;
-/*      overflow: hidden;*/
-/*      font-family: 'Comfortaa', sans-serif;*/
-/*      position: relative;*/
-/*      touch-action: manipulation;*/
+      height: 100%;
+      width: 100vw;
+/*    overflow: hidden;*/
+/*    font-family: 'Comfortaa', sans-serif;*/
+/*    position: relative;*/
+/*    touch-action: manipulation;*/
     }
 
     .hint {
-     height: 100dvh;
-     width: fit-content;
+      height: 100dvh;
+      width: fit-content;
       background-color: #000;
       background-image: url('kotyatnitsa_background.png');
-      background-size: contain;
+      background-size: cover;
       background-repeat: no-repeat;
       background-position: center;
     }
