--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
-      width: 100vw;
+/*      height: 100%;*/
+/*      width: 100vw;*/
 /*    overflow: hidden;*/
 /*    font-family: 'Comfortaa', sans-serif;*/
 /*    position: relative;*/
@@ -64,28 +64,33 @@
 
     .hint {
       height: 100dvh;
-      width: fit-content;
-      background-color: #000;
+/*      width: fit-content;*/
+      background-color: #ACBBBB;
       background-image: url('kotyatnitsa_background.png');
-      background-size: cover;
+      background-size: contain;
       background-repeat: no-repeat;
       background-position: center;
+      position: relative;
+      z-index: 0;
+    }
+    .title {
+      font-size: 1.1em;
+      z-index: 1;
+      position: absolute;
     }
   </style>
 </head>
 <body>
-  <div class="hint">
     <!-- <img src="https://telegram.org/img/t_logo.png" alt="TG" style="height: 18px; vertical-align: middle; margin-right: 4px;"> -->
-    <span style="font-size: 1.1em;">
+    <p class="title">
       Отборные видео с котами — <strong>телеграм-канал <span style="color:#FFD700;">КОТЯТНИЦА</span> 😺</strong>
-    </span>
-  </div>
-
+    </p>
   <!-- <a href="https://t.me/kotyatnitsa" onclick="ym(101949561,'reachGoal','tg_click')"> -->
     <!-- <div class="lapka" id="lapka"></div> -->
   <!-- </a> -->
+  <div class="hint"></div>
 
-  <!-- <audio id="meow" src="https://www.fesliyanstudios.com/play-mp3/6965"></audio> -->
+
 
   <script>
     document.getElementById('lapka').addEventListener('click', () => {
