--- a/index.html
+++ b/index.html
@@ -74,17 +74,22 @@
       z-index: 0;
     }
     .title {
-      font-size: 1.1em;
+      font-size: 0.9em;
       z-index: 1;
       position: absolute;
+      font-family: 'Comfortaa', sans-serif;
+      padding: 0 0.8rem;
     }
   </style>
 </head>
 <body>
     <!-- <img src="https://telegram.org/img/t_logo.png" alt="TG" style="height: 18px; vertical-align: middle; margin-right: 4px;"> -->
-    <p class="title">
-      Отборные видео с котами — <strong>телеграм-канал <span style="color:#FFD700;">КОТЯТНИЦА</span> 😺</strong>
+     <p class="title">
+      Отборные видео с котами — <strong>телеграм-канал</strong>
     </p>
+<!--     <p class="title">
+      Отборные видео с котами — <strong>телеграм-канал <span style="color:#FFD700;">КОТЯТНИЦА</span> 😺</strong>
+    </p> -->
   <!-- <a href="https://t.me/kotyatnitsa" onclick="ym(101949561,'reachGoal','tg_click')"> -->
     <!-- <div class="lapka" id="lapka"></div> -->
   <!-- </a> -->
