--- a/index.html
+++ b/index.html
@@ -43,14 +43,15 @@
     }
 
     .hint {
-      height: 100dvh;
-      background-color: #ACBBBB;
-      background-image: url('kotyatnitsa_background.png');
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center;
-      position: relative;
-      z-index: 0;
+    height: 100vh;
+    background-color: #ACBBBB;
+    background-image: url(kotyatnitsa_background.png);
+    background-size: contain;
+    background-repeat: no-repeat;
+    /* background-position: 19px; */
+    background-position-y: 22px;
+    position: relative;
+    z-index: 0;
     }
     .title {
       font-size: 0.9em;
