--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     });
   </script>
   <noscript>
-    <!-- <div><img src="https://mc.yandex.ru/watch/101949561" style="position:absolute; left:-9999px;" alt="" /></div> -->
+    <div><img src="https://mc.yandex.ru/watch/101949561" style="position:absolute; left:-9999px;" alt="" /></div>
   </noscript>
 </body>
 </html>
