--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <a class="lapka" href="https://t.me/kotyatnitsa" onclick="ym(101949561,'reachGoal','tg_click')"></a>
 </div>
 
-  <!-- Яндекс.Метрика -->
+  <!-- Метрика -->
   <script type="text/javascript">
     (function(m,e,t,r,i,k,a){
       m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
