--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
       height: 100%;
       font-family: 'Comfortaa', sans-serif;
       touch-action: manipulation;
-      background-color: #CAD9D2;
+      /*background-color: #CAD9D2;*/
+      background-image: url('fon.jpg');
       display: flex;
       justify-content: center;
       align-items: center;
@@ -35,7 +36,7 @@
     .lapka {
       position: absolute;
       top: 489px;
-      left: 287px;
+      left: 298px;
       width: 75px;
       height: 95px;
       transform: translate(-50%, -50%);
