--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
     .lapka {
       position: absolute;
-      top: 489px;
-      left: 298px;
+      top: 58.1%;
+      left: 76.3%;
       width: 75px;
       height: 95px;
       transform: translate(-50%, -50%);
@@ -52,6 +52,11 @@
       0%, 100% { transform: translate(-50%, -50%) scale(0.9); }
       50%      { transform: translate(-50%, -50%) scale(1.24); }
     }
+    /*@media (max-width: 600px) {*/
+    /*  .wrapper {*/
+    /*    transform: scale(0.8);*/
+    /*  }*/
+    /*}*/
   </style>
 </head>
 <body>
