--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       justify-content: center;
       align-items: center;
       overflow: hidden;
+      background-size: contain;
     }
 
     .wrapper {
