--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
   <a class="lapka" href="https://t.me/kotyatnitsa" onclick="ym(101949561,'reachGoal','tg_click')"></a>
 </div>
 
-<!-- Редирект через 4 секунды -->
+<!-- Редирект через 9 секунд -->
 <script>
   setTimeout(function() {
     window.location.href = "https://t.me/kotyatnitsa";
-  }, 4000);
+  }, 9000);
 </script>
 
 <!-- Метрика -->
