--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <!-- Редирект через 9 секунд -->
 <script>
   setTimeout(function() {
-    window.location.href = "https://t.me/kotyatnitsa";
+    window.location.href = "https://t.me/kotyatnitsa/430";
   }, 9000);
 </script>
 
