--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
 <body>
 <div class="wrapper">
   <img src="bg.jpg" class="bg" alt="background" />
-  <a class="lapka" href="https://t.me/kotyatnitsa" onclick="ym(101949561,'reachGoal','tg_click')"></a>
+  <a class="lapka" href="https://t.me/+O0tp4Z6ydSM2Njky" onclick="ym(101949561,'reachGoal','tg_click')"></a>
 </div>
 
-<!-- Редирект через 7 секунд -->
+<!-- Редирект через 9 секунд -->
 <script>
   setTimeout(function() {
-    window.location.href = "https://t.me/kotyatnitsa/430";
-  }, 7000);
+    window.location.href = "https://t.me/kotyatnitsa/481";
+  }, 9000);
 </script>
 
 <!-- Метрика -->
