--- a/index.html
+++ b/index.html
@@ -7,111 +7,75 @@
   <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&display=swap" rel="stylesheet">
   <style>
     html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
+      margin: 0; padding: 0; height: 100%;
       font-family: 'Comfortaa', sans-serif;
       touch-action: manipulation;
       background-image: url('fon.jpg');
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      overflow: hidden;
-      background-size: contain;
+      display: flex; justify-content: center; align-items: center;
+      overflow: hidden; background-size: contain;
     }
-
-    .wrapper {
-      position: relative;
-      width: 390px;
-      height: 844px;
-    }
-
-    .bg {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
-      display: block;
-    }
-
+    .wrapper { position: relative; width: 390px; height: 844px; }
+    .bg { width: 100%; height: 100%; object-fit: contain; display: block; }
     .lapka {
-      position: absolute;
-      top: 58.1%;
-      left: 76.3%;
-      width: 75px;
-      height: 95px;
+      position: absolute; top: 58.1%; left: 76.3%; width: 75px; height: 95px;
       transform: translate(-50%, -50%);
       background-image: url(lapka_transparent.png);
-      background-size: contain;
-      background-repeat: no-repeat;
-      background-position: center;
-      cursor: pointer;
-      animation: pulse 1.3s infinite;
+      background-size: contain; background-repeat: no-repeat; background-position: center;
+      cursor: pointer; animation: pulse 1.3s infinite;
     }
-
     @keyframes pulse {
-      0%, 100% { transform: translate(-50%, -50%) scale(0.9); }
-      50%      { transform: translate(-50%, -50%) scale(1.24); }
+      0%,100% { transform: translate(-50%,-50%) scale(0.9); }
+      50%     { transform: translate(-50%,-50%) scale(1.24); }
     }
   </style>
 
-  <!-- VK Pixel -->
+  <!-- VK Ads Pixel (Top.Mail.Ru counter) -->
   <script type="text/javascript">
-  !function(){
-    var t=document.createElement("script");
-    t.type="text/javascript"; t.async=!0;
-    t.src="https://vk.com/js/api/openapi.js?169";
-    t.onload=function(){
-      VK.Retargeting.Init("3688110"); // замени на свой ID
-      VK.Retargeting.Hit();
-    };
-    document.head.appendChild(t);
-  }();
+    var _tmr = window._tmr || (window._tmr = []);
+    _tmr.push({ id: 3688110, type: 'pageView', start: (new Date()).getTime() });
+    (function (d, w, id) {
+      if (d.getElementById(id)) return;
+      var ts = d.createElement('script'); ts.type = 'text/javascript'; ts.async = true; ts.id = id;
+      ts.src = 'https://top-fwz1.mail.ru/js/code.js';
+      var f = function () { var s = d.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ts, s); };
+      if (w.opera == '[object Opera]') { d.addEventListener('DOMContentLoaded', f, false); } else { f(); }
+    })(document, window, 'tmr-code');
   </script>
-  <noscript><img src="https://vk.com/rtrg?p=YOUR_PIXEL_ID" style="position:fixed; left:-999px;" alt=""/></noscript>
-  <!-- /VK Pixel -->
-
+  <noscript>
+    <div><img src="https://top-fwz1.mail.ru/counter?id=3688110;js=na" style="position:absolute;left:-9999px;" alt="Top.Mail.Ru" /></div>
+  </noscript>
+  <!-- /VK Ads Pixel -->
 </head>
 <body>
-<div class="wrapper">
-  <img src="bg.jpg" class="bg" alt="background" />
-  <a class="lapka" href="https://t.me/+O0tp4Z6ydSM2Njky" onclick="trackTGClick()"></a>
-</div>
+  <div class="wrapper">
+    <img src="bg.jpg" class="bg" alt="background" />
+    <a class="lapka" href="https://t.me/+O0tp4Z6ydSM2Njky" onclick="trackTGClick()"></a>
+  </div>
 
-<!-- Редирект через 9 секунд -->
-<script>
-  setTimeout(function() {
-    window.location.href = "https://t.me/kotyatnitsa/481";
-  }, 9000);
+  <!-- Автопереход через 9 секунд -->
+  <script>
+    setTimeout(function(){ window.location.href = "https://t.me/kotyatnitsa/481"; }, 9000);
 
-  // Отправка события в VK + Метрика при клике на лапку
-  function trackTGClick(){
-    if(window.VK && VK.Retargeting){
-      VK.Retargeting.Event('go_tg');
+    // Событие в VK Ads (Top.Mail.Ru) + метрика при клике на лапку
+    function trackTGClick(){
+      if (window._tmr && Array.isArray(_tmr)) {
+        _tmr.push({ id: 3688110, type: 'reachGoal', goal: 'go_tg' });
+      }
+      if (window.ym) { ym(101949561, 'reachGoal', 'tg_click'); }
     }
-    if(window.ym){
-      ym(101949561,'reachGoal','tg_click');
-    }
-  }
-</script>
+  </script>
 
-<!-- Метрика -->
-<script type="text/javascript">
-  (function(m,e,t,r,i,k,a){
-    m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-    m[i].l=1*new Date();
-    k=e.createElement(t),a=e.getElementsByTagName(t)[0];
-    k.async=1; k.src=r; a.parentNode.insertBefore(k,a);
-  })(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+  <!-- Яндекс.Метрика (если нужна) -->
+  <script type="text/javascript">
+    (function(m,e,t,r,i,k,a){
+      m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+      m[i].l=1*new Date();
+      k=e.createElement(t),a=e.getElementsByTagName(t)[0];
+      k.async=1; k.src=r; a.parentNode.insertBefore(k,a);
+    })(window, document, 'script', 'https://mc.yandex.ru/metrika/tag.js', 'ym');
 
-  ym(101949561, "init", {
-    clickmap: true,
-    trackLinks: true,
-    accurateTrackBounce: true,
-    webvisor: true
-  });
-</script>
-<noscript>
-  <div><img src="https://mc.yandex.ru/watch/101949561" style="position:absolute; left:-9999px;" alt="" /></div>
-</noscript>
+    ym(101949561, 'init', { clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true });
+  </script>
+  <noscript><div><img src="https://mc.yandex.ru/watch/101949561" style="position:absolute; left:-9999px;" alt=""/></div></noscript>
 </body>
 </html>
